[Password Manager] Improve password form reappear detection.

This CL adds field identifiers and content comparison to match
reappeared password form.

BUG=775837
R=dvadym@chromium.org

Change-Id: Ideb9543a9f8958f37dc6541b4d4878b82d7df643